--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "mercurius-fastcrud"
 version = "0.1.0"
 description = "FastCRUD helper to auto-generate FastAPI CRUD routes from SQLAlchemy models"
 readme = "README.md"
-authors = [ { name = "Your Name", email = "you@example.com" } ]
+authors = [ { name = "Fernando Barreto", email = "fernando.barreto@example.com" } ]
 license = { text = "MIT" }
 requires-python = ">=3.10"
 dependencies = ["fastapi", "sqlalchemy", "pydantic"]
